--- a/mainStyle.css
+++ b/mainStyle.css
@@ -32,20 +32,61 @@ h4{
 #mainIntro{
     /* margin: 0.7rem; */
     /* margin-top: 2.5rem; */
-    font-size: 0.8rem;
+    font-size: 1rem;
     line-height: 1.5rem;
     display: flex;
     flex-direction: column;
     gap: 1rem;
-    background: linear-gradient(0deg, rgb(255, 212, 212) 0%, rgb(255, 255, 255) 100%);
-    padding: 0.7rem 0.7rem;
-    color: rgb(66, 60, 60);
+    /* background: linear-gradient(0deg, rgb(255, 212, 212) 0%, rgb(255, 255, 255) 100%); */
+    padding: 1rem 1rem 4rem 1rem;
+    color: rgb(114, 49, 49);
    
 }
 
 #mainIntro span{
     font-weight: bold;
     color: rgb(147, 71, 64);
+}
+
+.callToAction{
+  display: flex;
+  align-items:center;
+  gap: 0.5rem;
+}
+
+.callToActionBG{
+ 
+  width: 15rem;;
+  height: 7rem;
+  /* background: url(/Images/cta1.svg); */
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
+
+.callToActionTitle{
+  font-size: 1.2rem;
+  color: #862424;
+  text-align: center;
+  line-height: 1.8rem;
+  padding: 0 0.5rem;
+  
+}
+
+@media only screen and (min-width:600px) {
+ 
+  .callToActionBG{
+    height: 9rem;
+    width: 14rem;
+  }
+
+  .callToActionTitle{
+    font-size: 1.5rem;
+    line-height: 2rem;
+    padding: 0 1rem;
+    
+
+  }
 }
 
 #msgOnLogin{
@@ -461,7 +502,7 @@ input[type="checkbox"]:checked ~ span:nth-of-type(3){
   visibility: hidden;
 	transition: all 0.4s ease-in;
 	position: absolute;
-	height: 100vh;
+	height: 130vh;
   border-top-right-radius: 5px;
   border-bottom-right-radius: 5px;
   border-left: solid 1px #ac5151;
