--- a/style.css
+++ b/style.css
@@ -141,7 +141,7 @@ header {
     font-size: 0.9rem;
     color: #006442;
     /* background-color: #ffffff; */
-    text-align: center;
+    text-align: left;
 }
 
 #divCorrectAnswer{
@@ -203,7 +203,7 @@ header {
     align-items: center;
     gap: 1rem;
     font-size: 0.9rem;
-    background: linear-gradient(0deg, rgb(255, 255, 255) 0%, rgb(255, 212, 224) 45%, rgb(255, 238, 242) 100%);
+    background: linear-gradient(0deg, rgb(248, 237, 237) 0%, rgb(255, 255, 255) 100%);
     padding: 2rem 0.5rem;
     
 }
