--- a/mainStyle.css
+++ b/mainStyle.css
@@ -176,12 +176,12 @@ border: 1px solid rgba(255, 255, 255, 0.3);
 
 .subscribeSection{
     /* background: linear-gradient(330deg, rgb(22, 228, 217) 0%, rgb(61, 34, 114) 100%); */
-    background: linear-gradient(150deg, rgb(247, 218, 223) 0%, rgb(251, 203, 196) 100%);
+    background: linear-gradient(150deg, rgb(247, 237, 239) 0%, rgb(238, 194, 187) 100%);
     color: rgb(251, 230, 230);
-    padding: 2rem 1rem;
+    padding: 0.5rem 1rem;
     text-align: center;
     /* border-radius: 10px; */
-    margin: 1rem 0;
+    margin: 0;
 
 }
 
@@ -239,6 +239,10 @@ iframe{
 
 .Constitution_Card{
   background: linear-gradient(180deg, rgb(221, 237, 236) 0%, rgba(255,255,255,1) 100%);
+}
+
+.CCS_Card{
+  background: linear-gradient(180deg, rgb(245, 235, 253) 0%, rgba(255,255,255,1) 100%);
 }
 
 .newCardHeading{
