--- a/mainStyle.css
+++ b/mainStyle.css
@@ -600,6 +600,74 @@ background: linear-gradient(to right, rgb(252, 230, 236), rgba(249, 249, 249, 0.
     background-color: rgb(210, 240, 244); /* Fallback color */
     background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
   }
+
+  /* Base styles for pricing cards */
+  .pricing-container {
+    padding: 20px;
+    background-color: #f6f7fb;
+    font-family: 'Helvetica Neue', Arial, sans-serif;
+}
+
+.pricing-header {
+    text-align: center;
+    color: #6a1711;
+    margin-bottom: 30px;
+}
+
+.pricing-options {
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+    gap: 1rem;
+}
+
+.pricing-card {
+    flex: 1;
+    padding: 20px;
+    border-radius: 10px;
+    box-shadow: 3px 3px 15px rgba(0, 0, 0, 0.1);
+    color: white;
+    text-align: center;
+    transition: transform 0.3s;
+    margin-bottom: 15px;
+}
+
+.paper1 {
+  background-image: linear-gradient( 109.6deg,  rgb(216, 149, 5) 11.2%, rgba(255,0,0,1) 100.2% );
+  /* color: #700808; */
+  font-family: Arial, Helvetica, sans-serif;
+}
+
+.paper2 {
+  background-image: linear-gradient( 132.6deg,  rgba(71,139,214,1) 23.3%, rgba(37,216,211,1) 84.7% );
+}
+
+.both-papers {
+  background-image: radial-gradient( circle 602px at 2.1% 5.1%,  rgba(233,0,120,1) 0%, rgba(0,0,0,1) 90.1% );
+}
+
+.gradient-text {
+  font-size: 30px;
+  background: linear-gradient(45deg, rgb(173, 2, 70), rgb(115, 9, 181));
+  -webkit-background-clip: text;
+  color: transparent;
+}
+
+/* Media query for smartphones */
+@media screen and (max-width: 768px) {
+    .pricing-options {
+        flex-direction: column;
+        gap: 0.8rem;
+        
+    }
+
+    .pricing-card {
+      padding: 15px;
+      width: 80%;
+      margin: auto;
+    }
+
+}
   
   /* Modal Content */
   .modal-content {
