--- a/mainStyle.css
+++ b/mainStyle.css
@@ -679,7 +679,7 @@ background: linear-gradient(to right, rgb(252, 230, 236), rgba(249, 249, 249, 0.
 
 #toast.success {
   background-color: #5cb85c;
-  background-image: linear-gradient( 99deg,  rgba(115,18,81,1) 10.6%, rgba(28,28,28,1) 118% );
+  background-image: linear-gradient( 99deg,  rgb(18, 115, 79) 10.6%, rgb(28, 28, 28) 118% );
 }
 
 #toast.error {
